# AIStockAdvisor

./: .env.example  .gitignore  README.md  mcp-config.example.json  ownership.example.yaml  pyproject.toml  requirements.txt  watchlists.yaml
.github/workflows/: daily-report.yml
data/: bse_full_universe.csv  india_full_universe.csv  nse_full_universe.csv  nse_universe.csv
data/sectors/Auto/: Stocks Data_Auto Ancilaries.csv  Stocks Data_Auto Manufacturers.csv  Stocks Data_Tyres & Rubber Products.csv
data/sectors/CapitalGoods/: Stocks Data_Aerospace & Defense.csv  Stocks Data_Cables - Electricals.csv  Stocks Data_EMS.csv  Stocks Data_Electrical - Power Equipment.csv  Stocks Data_Electrical Miscallaneous.csv  Stocks Data_Glass.csv  Stocks Data_Industrial Products & Manufacturing.csv  Stocks Data_Packaging.csv  Stocks Data_Pumps.csv  Stocks Data_Railways.csv  Stocks Data_Ship building & Allied services.csv  Stocks Data_Transformers.csv
data/sectors/Chemicals/: Stocks Data_Agro chemicals.csv  Stocks Data_Chemicals Specialty.csv  Stocks Data_Chemicals-Basic.csv  (+4 more)
scripts/: check_mcp_setup.py  daily_refresh.py  refresh_universe.py  run_mcp_stock_research.py
src/stock_advisor/: cli.py
tests/: test_analyst_events.py  test_chart_patterns.py  test_company_intelligence.py  test_dhan.py  test_indicators.py  test_market_analytics.py  test_market_data.py  test_mcp_server.py  test_news.py  test_ownership.py  test_pipeline.py  test_portfolio_analysis.py  test_scoring.py  test_sector_rotation.py  test_sector_rotation_workflow.py  test_theme_discovery.py  test_universe.py
(+121 files in other folders)
