[project]
name = "ai-stock-advisor-mcp"
version = "0.1.0"
description = "Daily AI stock suggestion system with MCP tools"
requires-python = ">=3.11"

[project.scripts]
stock-advisor = "stock_advisor.cli:main"

[project.optional-dependencies]
agent = ["langgraph>=0.2.60", "pypdf>=4.3.0"]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
